# ur

./: .gitignore  LICENSE.txt  Makefile  README.md  meson.build
cross-file/: web.ini
subprojects/cursesfe/: meson.build
subprojects/cursesfe/src/: main.cpp
subprojects/libur/: meson.build
subprojects/libur/include/: BinaryLotMachine.hpp  GameSettings.hpp  GameState.hpp  coord.hpp
subprojects/libur/src/: BinaryLotMachine.cpp  GameSettings.cpp  GameState.cpp  coord.cpp  main.cpp
subprojects/libur/tests/src/: tests.cpp
subprojects/raylibfe/: meson.build  meson.options
subprojects/raylibfe/include/: AiThread.hpp  DrawThread.hpp  GameStateDrawer.hpp  InfoMenu.hpp  MainMenu.hpp  MenuDrawer.hpp  StartGameMenu.hpp  raylib-extra.hpp
subprojects/raylibfe/src/: AiThread.cpp  DrawThread.cpp  GameStateDrawer.cpp  InfoMenu.cpp  MainMenu.cpp  StartGameMenu.cpp  main.cpp  raylib-extra.cpp
subprojects/urai/: meson.build
subprojects/urai/include/: Ai.hpp  AiChoice.hpp  OracleAi.hpp  RandomAi.hpp
subprojects/urai/src/: Ai.cpp  OracleAi.cpp  RandomAi.cpp
subprojects/urai/tests/: tests.cpp
